--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "evaluacion2024",
+  "name": "anonimo",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "node ./bin/www"
+    "dev": "node ./bin/www --watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^3.1.9",
+    "express": "^4.19.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "request": "^2.88.2",
-    "sqlite3": "^5.1.7"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.13",
+    "sqlite3": "^5.1.7",
+    "sweetalert2": "^11.6.13"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
