--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMAIL_USER = "programacion950@gmail.com"
-EMAIL_PASS = "roqtmyuizailzkon"
-EMAIL_DESTINO1 = "reddragonlord72@gmail.com"
+export EMAIL_USER = "programacion950@gmail.com"
+export EMAIL_PASS = "roqtmyuizailzkon"
+export EMAIL_DESTINO1 = "reddragonlord72@gmail.com"
